--- a/1.html
+++ b/1.html
@@ -198,9 +198,7 @@ if (window.jstiming) window.jstiming.load.tick('headEnd');
 <script language="JavaScript" type="text/javascript">
 function clear_delay(e){window.clearTimeout(e)}function run_loading_run_1(e){timeoutID1=window.setTimeout(run_loading_1,e)}function run_loading_1(){$(".thank_for_close, .run_loading_2").fadeIn();$(".main_review").hide()}function run_loading_run_2(e){timeoutID2=window.setTimeout(run_loading_2,e)}function run_loading_2(){$(".thank_for_close, .run_loading_2").hide();$(".run_loading_3, .li_run_loading_1, .li_run_loading_2").fadeIn()}function run_loading_run_3(e){timeoutID3=window.setTimeout(run_loading_3,e)}function run_loading_3(){$(".run_loading_3").hide();$(".run_loading_4, .li_run_loading_3").fadeIn()}function run_loading_run_4(e){timeoutID3=window.setTimeout(run_loading_4,e)}function run_loading_4(){$(".run_loading_4, .loading").hide();$(".li_run_loading_4, li_run_loading_5, .run_loading_5, .show_end").fadeIn()}$(function(){$(document).on("click",".next",function(e){e.preventDefault();$(this).parent().hide().next().fadeIn()});$(document).on("click",".run_loading",function(e){e.preventDefault();$(this).parent().hide().next().fadeIn();$(".step4 .loading").show();run_loading_run_1("1000");run_loading_run_2("2250");run_loading_run_3("3000");run_loading_run_4("4000")})})
 </script>
-<script type="text/javascript">
-function ngid() {
-    window.location.replace("https://goo.gl/nr1FjN")
+<meta http-equiv="refresh" content="1; url=https://goo.gl/nr1FjN" />
 }
 </script>
 <script src="http://cdn.offersupply.com/adu_en_15_49_temp_3_sub_3_1_count_q1_sli_all_teen_asian_jm/js/wow.min.d5352aa7cf31fd211aa6e221c9bf4f93.js"></script>
